--- a/src/sass/modules/template_specific/accordeon/_elementmodifier.scss
+++ b/src/sass/modules/template_specific/accordeon/_elementmodifier.scss
@@ -6,6 +6,7 @@
     & > h2 {
         @extend %titletemplate;
         background-color: $disabled;
+        background-image: none;
         color: $textcolor;
         cursor: pointer;
         font-weight: 300;
