--- a/src/sass/modules/component/form/currencyInput/_currency.scss
+++ b/src/sass/modules/component/form/currencyInput/_currency.scss
@@ -28,7 +28,7 @@
     }
 
     &>shortlabel {
-        @extend %shortlabel;
+        @extend %label;
         background-color: $accent;
 
         color: $white;
