--- a/src/sass/modules/component/form/radiobutton/_radioPlaceholder.scss
+++ b/src/sass/modules/component/form/radiobutton/_radioPlaceholder.scss
@@ -3,7 +3,7 @@
 
 
     .shortlabel {
-        @extend %shortlabel;
+        @extend %label;
         display: flex;
         padding-left: em(15);
 
@@ -15,7 +15,8 @@
             display: none;
 
             + .shortlabel {
-                @extend %shortlabel;
+                @extend %label;
+                align-items: center;
                 background: $white;
                 border: 1px solid $input-border;
                 border-radius: 50%;
