--- a/src/sass/modules/component/form/input-group/_inputgroupPlacholder.scss
+++ b/src/sass/modules/component/form/input-group/_inputgroupPlacholder.scss
@@ -16,7 +16,7 @@
     }
 
     .shortlabel {
-        @extend %shortlabel;
+        @extend %label;
         background-color: $input-border;
         font-size: ms(0);
         padding: em(5) .5em;
