--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -26,3 +26,4 @@
 @import 'modules/template_specific/sidebar/filter-button/filter-button';
 @import 'modules/template_specific/sidebar/iconlist/iconlist';
 @import 'modules/template_specific/sidebar/intertitre/intertitre';
+@import 'modules/core/color-text-bg/color-text-BG';
