--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -279,60 +279,6 @@ textarea {
   -ms-touch-action: manipulation;
   touch-action: manipulation; }
 
-.textcolor-white {
-  color: #fff; }
-
-.bgcolor-white {
-  background-color: #fff; }
-
-.textcolor-black {
-  color: #000; }
-
-.bgcolor-black {
-  background-color: #000; }
-
-.textcolor-accent {
-  color: #24a6d4; }
-
-.bgcolor-accent {
-  background-color: #24a6d4; }
-
-.textcolor-primary {
-  color: #004070; }
-
-.bgcolor-primary {
-  background-color: #004070; }
-
-.textcolor-secondary {
-  color: #fdb812; }
-
-.bgcolor-secondary {
-  background-color: #fdb812; }
-
-.textcolor-textcolor {
-  color: #444; }
-
-.bgcolor-textcolor {
-  background-color: #444; }
-
-.textcolor-alert {
-  color: #f44; }
-
-.bgcolor-alert {
-  background-color: #f44; }
-
-.textcolor-warning {
-  color: #f0ad4e; }
-
-.bgcolor-warning {
-  background-color: #f0ad4e; }
-
-.textcolor-success {
-  color: #5cb85c; }
-
-.bgcolor-success {
-  background-color: #5cb85c; }
-
 .row {
   -webkit-box-align: start;
   -ms-flex-align: start;
@@ -392,43 +338,34 @@ textarea {
   padding: 0 0.25em; }
   .col.xsmall {
     -webkit-box-flex: 0;
-    -ms-flex: 0 0 18%;
-    flex: 0 0 18%;
+    -ms-flex: 0 0 20%;
+    flex: 0 0 20%;
     padding: 0 0.25em; }
   .col.small {
     -webkit-box-flex: 0;
-    -ms-flex: 0 0 36%;
-    flex: 0 0 36%;
+    -ms-flex: 0 0 40%;
+    flex: 0 0 40%;
     padding: 0 0.25em; }
   .col.medium {
     -webkit-box-flex: 0;
-    -ms-flex: 0 0 54%;
-    flex: 0 0 54%;
+    -ms-flex: 0 0 60%;
+    flex: 0 0 60%;
     padding: 0 0.25em; }
   .col.large {
     -webkit-box-flex: 0;
-    -ms-flex: 0 0 72%;
-    flex: 0 0 72%;
+    -ms-flex: 0 0 80%;
+    flex: 0 0 80%;
     padding: 0 0.25em; }
   .col.xlarge {
-    -webkit-box-flex: 0;
-    -ms-flex: 0 0 90%;
-    flex: 0 0 90%;
-    padding: 0 0.25em; }
-  .col.full {
     -webkit-box-flex: 1;
     -ms-flex: 1 1 100%;
     flex: 1 1 100%;
+    padding: 0 0.25em; }
+  .col.full {
+    -webkit-box-flex: 1;
+    -ms-flex: 1  1 100%;
+    flex: 1  1 100%;
     padding: 0; }
-  .col.left {
-    -ms-flex-item-align: start;
-    align-self: flex-start; }
-  .col.right {
-    -ms-flex-item-align: end;
-    align-self: flex-end; }
-  .col.center {
-    -ms-flex-item-align: center;
-    align-self: center; }
   .col.wrap {
     -webkit-box-align: start;
     -ms-flex-align: start;
@@ -483,7 +420,8 @@ button {
   button:hover {
     background-color: #1d84a8; }
   button:disabled {
-    background-color: #e9e9e9; }
+    background-color: #e9e9e9;
+    color: #c3c3c3; }
   button[type='submit'] {
     background-color: #24a6d4;
     border: 0;
@@ -505,7 +443,8 @@ button {
     button[type='submit']:hover {
       background-color: #1d84a8; }
     button[type='submit']:disabled {
-      background-color: #e9e9e9; }
+      background-color: #e9e9e9;
+      color: #c3c3c3; }
 
 input[type='submit'] {
   background-color: #24a6d4;
@@ -528,7 +467,8 @@ input[type='submit'] {
   input[type='submit']:hover {
     background-color: #1d84a8; }
   input[type='submit']:disabled {
-    background-color: #e9e9e9; }
+    background-color: #e9e9e9;
+    color: #c3c3c3; }
 
 .input-group input[type='submit'] {
   background-color: #24a6d4;
@@ -551,37 +491,38 @@ input[type='submit'] {
   .input-group input[type='submit']:hover {
     background-color: #1d84a8; }
   .input-group input[type='submit']:disabled {
-    background-color: #e9e9e9; }
+    background-color: #e9e9e9;
+    color: #c3c3c3; }
 
 h1 {
-  font-size: 1.5625em; }
+  font-size: 1.95312em; }
   @media (min-width: 768px) {
     h1 {
-      font-size: 3.05176em; } }
+      font-size: 2.44141em; } }
 
 h2 {
-  font-size: 1.25em; }
+  font-size: 1.5625em; }
   @media (min-width: 768px) {
     h2 {
-      font-size: 2.44141em; } }
+      font-size: 1.95312em; } }
 
 h3 {
   font-size: 1.25em; }
   @media (min-width: 768px) {
     h3 {
-      font-size: 1.95312em; } }
+      font-size: 1.5625em; } }
 
 h4 {
   font-size: 1.125em; }
   @media (min-width: 768px) {
     h4 {
-      font-size: 1.5625em; } }
+      font-size: 1.25em; } }
 
 h5 {
-  font-size: 1.0625em; }
+  font-size: 1em; }
   @media (min-width: 768px) {
     h5 {
-      font-size: 1.25em; } }
+      font-size: 1em; } }
 
 h6 {
   font-size: 0.8em; }
@@ -710,7 +651,7 @@ input, .col.currency input, .pourcent input, .pourcent input:focus, .col.dropdow
   font-family: sans-serif;
   font-size: 1em;
   height: 1.625em;
-  margin: 0;
+  margin: 0 0 0.625em;
   min-width: 0;
   padding: 0 .5em;
   -webkit-transition: -webkit-box-shadow .3s;
@@ -749,7 +690,7 @@ label, .col.currency > shortlabel, .pourcent > shortlabel, .radio .shortlabel, .
   font-size: 0.8em;
   margin: 0;
   padding-bottom: 0.125em;
-  padding-left: 0.25em;
+  padding-left: 0;
   padding-right: .5em;
   padding-top: 0;
   text-align: left;
@@ -1771,3 +1712,57 @@ ul.iconlist {
   margin-bottom: 0.625em;
   margin-top: 1.25em;
   padding: 0.3125em 1em; }
+
+.textcolor-white {
+  color: #fff !important; }
+
+.bgcolor-white {
+  background-color: #fff !important; }
+
+.textcolor-black {
+  color: #000 !important; }
+
+.bgcolor-black {
+  background-color: #000 !important; }
+
+.textcolor-accent {
+  color: #24a6d4 !important; }
+
+.bgcolor-accent {
+  background-color: #24a6d4 !important; }
+
+.textcolor-primary {
+  color: #004070 !important; }
+
+.bgcolor-primary {
+  background-color: #004070 !important; }
+
+.textcolor-secondary {
+  color: #fdb812 !important; }
+
+.bgcolor-secondary {
+  background-color: #fdb812 !important; }
+
+.textcolor-textcolor {
+  color: #444 !important; }
+
+.bgcolor-textcolor {
+  background-color: #444 !important; }
+
+.textcolor-alert {
+  color: #f44 !important; }
+
+.bgcolor-alert {
+  background-color: #f44 !important; }
+
+.textcolor-warning {
+  color: #f0ad4e !important; }
+
+.bgcolor-warning {
+  background-color: #f0ad4e !important; }
+
+.textcolor-success {
+  color: #5cb85c !important; }
+
+.bgcolor-success {
+  background-color: #5cb85c !important; }
