--- a/src/sass/modules/component/form/_input.scss
+++ b/src/sass/modules/component/form/_input.scss
@@ -6,7 +6,7 @@
     font-family: sans-serif;
     font-size: ms(0);
     height: em(26);
-    margin: 0;
+    margin: 0 0 em(10);
     min-width: 0;
     padding: 0 .5em;
     transition: box-shadow .3s;
