component layout documented

--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -1,8 +1,7 @@
 @import 'modules/core/core';
 @import 'modules/component/layout/accordion-icon/accordion-icon';
 @import 'modules/component/layout/accordion-normal/accordion';
-//@import 'modules/component/layout/hero-image/hero';
-//@import 'modules/component/layout/scrolldown/scrolldown';
+@import 'modules/component/layout/hero-image/hero';
 @import 'modules/component/layout/stickyheader/stickyheader';
 @import 'modules/component/form/formElement';
 @import 'modules/component/form/currencyInput/currencyinput';
