--- a/src/sass/modules/component/element/progress/_progressbarPlaceholder.scss
+++ b/src/sass/modules/component/element/progress/_progressbarPlaceholder.scss
@@ -1,7 +1,15 @@
 %progress {
     appearance: none;
+    background-color: $white;
+    border-radius: em(2);
+    box-shadow: 0;
+    color: $progress-base;
     height: em(20);
     width: 100%;
+
+
+
+
 
     //sass-lint:disable no-vendor-prefixes
     @for $i from 67 through 100 {
@@ -23,6 +31,7 @@
     @for $i from 34 through 66 {
         &[value='#{$i}'] {
             //sass-lint:disable no-vendor-prefixes
+
             &::-webkit-progress-value {
                 //sass-lint:enable no-vendor-prefixes
                 background-image:
@@ -65,8 +74,22 @@
         background-image:
         linear-gradient(to top right, $light 25%, transparent 25%, transparent 50%, $light 50%, $light 75%, transparent 75%, transparent),
         linear-gradient($light25, $bs25),
-        linear-gradient(to right, $progress-base, $success);;;
+        linear-gradient(to right, $progress-base, $success);
         background-size: 40px 40px, 100% 100%, 100% 100%;
         border-radius: 2px;
     }
+
+    //sass-lint:disable no-vendor-prefixes
+    &::-moz-progress-bar {
+        //sass-lint:enable no-vendor-prefixes
+        background-image:
+        linear-gradient(45deg, $light 25%, transparent 25%, transparent 50%, $light 50%, $light 75%, transparent 75%, transparent),
+        linear-gradient($light25, $bs25),
+        linear-gradient(to right, $progress-base, $progress-base);
+        background-size: 40px 40px, 100% 100%, 100% 100%;
+        border-radius: 2px;
+
+    }
+
+    //sass-lint:disable no-vendor-prefixes
 }
