--- a/src/sass/modules/component/form/radiobutton/_radioPlaceholder.scss
+++ b/src/sass/modules/component/form/radiobutton/_radioPlaceholder.scss
@@ -2,7 +2,7 @@
     @include flexbox(row, wrap, flex-start, flex-start);
 
 
-    .shortlabel {
+    label {
         @extend %label;
         display: flex;
         padding-left: em(15);
@@ -14,7 +14,7 @@
         &[type='radio'] {
             display: none;
 
-            + .shortlabel {
+            + label {
                 @extend %label;
                 align-items: center;
                 background: $white;
